terraform/alb.tf
resource "aws_lb" "app_alb" {
  name               = "app_alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.lb_sg.id]
  subnets            = [module.network.public1_subnet_id,module.network.public2_subnet_id,module.network.public3_subnet_id]

  tags = {
    name = "app_alb"
  }
}

resource "aws_lb_target_group" "app_lb_tg" {
  name     = "app_lb_tg"
  port     = 3000
  protocol = "HTTP"
  vpc_id   = module.network.vpc_id
}

resource "aws_lb_target_group_attachment" "lb_tg_attachment" {
  target_group_arn = aws_lb_target_group.app_lb_tg.arn
  target_id        = aws_instance.application.id
  port             = 3000
}

resource "aws_lb_listener" "lb_listener" {
  load_balancer_arn = aws_lb.app_alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app_lb_tg.arn
  }
}
